# aoc2019

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  run
benches/: benchmarks.rs
data/: 02.txt  06.txt  07.txt  08.txt  11.txt  12.txt  15.txt
src/: computer.rs  day01.rs  day02.rs  day03.rs  day03_v2.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  lib.rs  macros.rs  main.rs  utils.rs
src/alternatives/: day03.rs
website/: Cargo.toml  package.json  webpack.config.js
website/js/: App.js  index.html
website/wasm/: lib.rs
