[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
atoi = "0.3"
crossbeam = "0.7"
itertools = "0.8"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
