[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
atoi = "0.3"
bytecount = "0.6"
crossbeam = "0.7"
itertools = "0.8"
lazy_static = "1.4"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true

